# social-media-backend

./: .gitignore  Cargo.toml  README.md
src/: common_service.rs  db.rs  error.rs  jwt.rs  main.rs  ws.rs
src/chat/: chat_service.rs  mod.rs  model.rs
src/posts/: mod.rs  model.rs  post_service.rs
src/users/: mod.rs  model.rs  user_service.rs
