[package]
name = "social_media_backend"
version = "0.1.0"
edition = "2024"
resolver = "2"


[dependencies]
argon2 = "0.5.3"
chrono = "0.4.43"
dashmap = "6.1.0"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10",default-features = false,  features = ["rust_crypto"] }
once_cell = "1.21.3"
regex = "1.12.3"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = "3.0.1"
surrealdb-types = "3.0.1"
thiserror = "2.0.18"
tokio = "1.49.0"
uuid = { version = "1.21.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
